syntax = "proto3";
package cis.types;
option csharp_namespace = "SharedTypes.GrpcTypes";

message NullableGrpcDecimal {
  int64 units = 1;

  sfixed32 nanos = 2;
}